src/app/components/home/home.component.css
.img {
  height: 200px;
  width: 250px;
}

.sitter {
  padding: 30px 0;
}

.panel {
  width: 320px;
  margin: auto;
  box-shadow: none;
}

.text-muted subFont {
  padding-top: 50px;
}

.Sitter-subHeading {
  padding-top: 10px;
}

.SitterRow {
  display: flex;
  -webkit-justify-content: space-around;
  /* Safari */
  justify-content: space-around;
  padding-top: 60px;
}

.Content-heading {
  font-size: 50px;
  font-family: "Poiret One", cursive;
}

h2,
h1 {
  font-family: "Poiret One", cursive;
}

.Services {
  color: #8c8c8c;
  background-color: #ff978f56;
  padding: 30px 0;
}

.service {
  display: flex;
}

.service-image {
  margin-top: auto;
  margin-bottom: auto;
  max-height: 140px;
  min-height: 140px;
  max-width: 143px;
  min-width: 143px;
  padding: 0;
}

.intro-image {
  overflow: hidden;
  background-image: url("../../../assets/img/Main_dog_image.jpg");
  background-size: cover;
  background-attachment: fixed;
  height: 753px !important;
  background-position: center;
}

.subFont {
  font-family: "Poiret One", cursive;
  font-size: 20px;
}

.card {
  border-style: solid;
  border-width: 1px;
  border-color: white;
  background-color: rgba(255, 255, 255, 0.4);
  padding-left: 35px;
  padding-right: 35px;
  padding-top: 35px;
  padding-bottom: 50px;
  width: 50%;
  float: left;
  left: 42%;
  position: absolute;
  margin-top: 80px;
  margin-left: -260px;
  -moz-border-radius: 7px;
  -webkit-border-radius: 7px;
}

.cardHeader {
  font-size: 48px !important;
  color: #ff978f;
  text-align: center;
  line-height: 48px;
  font-weight: bold;
  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
}

.cardSubHeader {
  font-size: 22px;
  color: rgb(0, 6, 69);
  color: rgba(0, 6, 69, 0.3);
  line-height: 22px;
  font-weight: normal;
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
  text-align: center;
}

.testimonials {
  padding-top: 30px;
}

.testimonial-panel {
  //max-width: 261px;
  margin: auto;
}

#testimonials-container {
  display: flex;
  -webkit-justify-content: space-around;
  /* Safari */
  justify-content: space-around;
}

figure.testimonial {
  font-family: 'Raleway', Arial, sans-serif;
  position: relative;
  float: left;
  overflow: hidden;
  margin: 10px 1%;
  min-width: 220px;
  max-width: 310px;
  width: 100%;
  color: #8c8c8cce;
  text-align: left;
  box-shadow: none !important;
}

figure.testimonial * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

figure.testimonial img {
  max-width: 100%;
  height: 80px;
  width: 80px;
  border-radius: 50%;
  margin-right: 5px;
  display: block;
  z-index: 1;
  position: absolute;
  right: 50%;
}

figure.testimonial blockquote {
  margin: 0;
  display: block;
  border-radius: 8px;
  border-color: #ff978f8e;
  position: relative;
  background-color: #ffffff;
  padding: 30px 50px 65px 50px;
  font-size: 0.8em;
  font-weight: 500;
  margin: 0 0 -40px;
  line-height: 1.6em;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
}

figure.testimonial blockquote:before,
figure.testimonial blockquote:after {
  font-family: 'FontAwesome';
  content: "\201C";
  position: absolute;
  font-size: 50px;
  opacity: 0.3;
  font-style: normal;
}

figure.testimonial blockquote:before {
  top: 35px;
  left: 20px;
}

figure.testimonial blockquote:after {
  content: "\201D";
  right: 20px;
  bottom: 35px;
}

figure.testimonial .author {
  margin: 0;
  height: 80px;
  display: block;
  text-align: left;
  color: yellow;
  padding: 0 35px;
  position: relative;
}

figure.testimonial .author h5,
figure.testimonial .author span {
  left: 50%;
  position: absolute;
  opacity: 0.8;
  padding: 3px 5px;
}

figure.testimonial .author h5 {
  text-transform: uppercase;
  bottom: 50%;
  margin: 0;
  font-weight: 800;
  color: #ff978f;
}

figure.testimonial .author span {
  font-size: 0.8em;
  color: #8c8c8c;
  top: 50%;
}

@media (max-width:900px) {
  .SitterRow {
    -webkit-flex-direction: column;
    /* Safari */
    flex-direction: column;
    -webkit-justify-content: center;
    /* Safari */
    justify-content: center;
  }
}

@media (max-width:920px) {
  #testimonials-container {
    -webkit-flex-direction: column;
    /* Safari */
    flex-direction: column;
    -webkit-justify-content: center;
    /* Safari */
    justify-content: center;
  }
}

